--- a/src/uart_msg/package.xml
+++ b/src/uart_msg/package.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>lidar</name>
+  <name>uart_msg</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="wangzinuo233@gmail.com">xiluo</maintainer>
   <license>TODO: License declaration</license>
-
-  <depend>rclpy</depend>
-  <depend>ros_gz_sim</depend>
-  <depend>ros_gz_bridge</depend>
-  <depend>ros_gz_image</depend>
   <depend>std_msgs</depend>
-  <depend>nav_msgs</depend>
+  <!-- 如果还用了 geometry_msgs、nav_msgs 等，也要加 -->
   <depend>geometry_msgs</depend>
-
-  <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
-
+  <depend>nav_msgs</depend>
+  <!--编译依赖-->
   <build_depend>rosidl_default_generators</build_depend>
+  <!--执行依赖-->
   <exec_depend>rosidl_default_runtime</exec_depend>
+  <!--声明当前所属的功能包组-->
   <member_of_group>rosidl_interface_packages</member_of_group>
   
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
